<resources>
    <string name="app_name">EXFF</string>
    <string name="forgetyourpass">
        <u>
            <i>Quên mật khẩu ?</i>
        </u>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="twitterUsername">\@joeytribbiani</string>

    <string name="edituserprofile">Sửa thông tin</string>
    <string name="changepass">Thay đổi mật khẩu</string>
    <string name="logout">Đăng xuất</string>

    <!--bottom nav bar-->
    <string name="nav_bar_home">Trang chủ</string>
    <string name="nav_bar_charity">Từ thiện</string>
    <string name="nav_bar_notif">Thông báo</string>
    <string name="nav_bar_profile">Người dùng</string>
    <string name="nav_bar_message">Tin nhắn</string>
    <string name="nav_bar_addfriend">Kết bạn</string>

    <!--Facebook-->
    <string name="facebook_app_id">293758374637458</string>
    <string name="facebook_login_protocol_schema">fb293758374637458</string>

    <string name="asset_statements" translatable="false">[{ \"include\":
        \"https://exff-104b8.firebaseapp.com/.well-known/assetlinks.json\" }]
    </string>

    <string name="title_create_donationPost">Tạo bài viết mới</string>
    <string name="title_edit_donationPost">Chỉnh sửa bài viết</string>
    <string name="title_create_item">Thêm đồ dùng mới</string>
    <string name="title_edit_item">Cập nhật thông tin</string>
    <string name="default_donation_title">Quyên góp</string>
    <string name="error_input_address">Bạn chưa điền địa chỉ</string>
    <string name="error_input_title">Bạn chưa điền tiêu đề</string>
    <string name="error_input_content">Bạn chưa nhập nội dung</string>
    <string name="error_input_itemName">Bạn chưa điền tên đồ dùng</string>
    <string name="error_input_itemDesciption">Bạn chưa thêm mô tả đồ dùng</string>
    <string name="error_input_image">Bạn cần chọn ít nhất 1 tấm hình.</string>
    <string name="error_loading">Vui lòng thử lại sau.</string>
    <string name="privacy_public">Công khai</string>
    <string name="privacy_friends">Bạn bè</string>
    <string name="data_loading_noti">Đang tải dữ liệu...</string>
    <string name="waiting_noti">Vui lòng chờ...</string>
    <string name="select_item_noti">Vui lòng chọn đồ dùng.</string>
    <string name="no_donators">Chưa có ai quyên góp cho bài này</string>
    <string name="sync_contact_title">Đồng Bộ Danh Bạ</string>
    <string name="notification_title">Thông Báo</string>
    <string name="explore_title">Khám Phá</string>
    <string name="transaction_confirm_title">Giao Dịch</string>
    <string name="confirm_password_alert">Cần phải xác nhận mật khẩu mới</string>
    <string name="string_password_alert">Mật khẩu mới không đủ dài</string>
    <string name="password_validation_alert">Mật khẩu cũ không đúng</string>
    <string name="confirm_new_pass_alert">Mật khẩu mới chưa được xác nhận</string>
    <string name="change_pass_alert">Hãy sử dụng mật khẩu khác với mật khẩu cũ</string>
    <string name="change_pass_success">Thay đổi mật khẩu thành công</string>
    <string name="pass_change_fail_alert">Không thể thay đổi mật khẩu bây giờ</string>
    <string name="recieve_address">Địa chỉ nhận hàng</string>
    <string name="confirm_information_title">Xác nhận thông tin</string>
    <string name="confirm_information_success">Hoàn thành xác nhận</string>
    <string name="confirm_information_message">Bạn đã xác nhận thông tin thành công!</string>
    <string name="view_map">Xem bản đồ</string>
    <string name="continuous">Tiếp tục</string>
    <string name="input_message">Tin nhắn</string>
    <string name="trade_receive_item">Đồ dùng của</string>
    <string name="trade_send_item">Đồ dùng của bạn</string>
    <string name="trade_add_receive_item">Thêm đồ muốn nhận</string>
    <string name="trade_add_send_item">Thêm đồ muốn gửi</string>
    <string name="cancel">Hủy</string>
    <string name="finish">Chốt</string>
    <string name="message">Tin nhắn</string>
    <string name="trade">Trao đổi</string>
    <string name="trade_inf_title">Thông tin trao đổi</string>
    <string name="transaction_history">Lịch sử trao đổi</string>
    <string name="no_transaction">Bạn chưa có lịch sử trao đổi nào.</string>
    <string name="title_explore_friend">Khám Phá Bạn Bè</string>
    <string name="title_own_friend_list">Danh Sách Bạn Bè</string>
    <string name="title_inventory">kho đồ</string>
    <string name="title_transaction">Giao Dịch</string>
    <string name="title_friend">Bạn Bè</string>
    <string name="title_donation">Từ Thiện</string>
    <string name="info_PhoneNumber">Điện Thoại</string>
    <string name="delete_item">Xóa</string>
    <string name="update_item">Chỉnh sửa thông tin</string>
    <string name="delete_item_noti">Xóa Thành Công</string>
    <string name="error_server">Lỗi Hệ Thống!</string>
    <string name="error_request">Xảy ra lỗi!</string>
    <string name="lock_donation">Khóa Thành Công</string>
    <string name="signup_error">Đăng Kí Lại</string>
    <string name="edit_profile_success">Thay đổi thông tin cá nhân thành công</string>
    <string name="login">Đăng Nhập</string>
    <string name="cancle">Hủy</string>
    <string name="waiting_transaction">Chờ xác nhận chuyển đồ</string>
    <string name="done_transaction">Giao dịch\nđã thành công</string>
    <string name="donation_transaction">Quyên góp\ntừ thiện</string>

    <!--trade room noti-->
    <string name="user_accepted_trade">đã chốt</string>
    <string name="user_reseted_trade">đã xóa tất cả đồ dùng</string>
    <string name="user_canceled_confirm_trade">đã hủy chốt</string>
    <string name="user_added_item">đã được thêm vào</string>
    <string name="user_removed_item">đã bị xóa</string>
    <string name="trade_done">Xác nhận trao đổi</string>
    <string name="me_confirmed">Bạn</string>

    <!--rating-->
    <string name="rating_ques">Đánh giá của bạn</string>
    <string name="rating_send">Gửi</string>
    <string name="rating_title">Đánh giá người dùng</string>
    <string name="comment_hint">Thêm bình luận</string>
    <string name="rating_title_profile">Đánh giá</string>

    <!--qrCode-->
    <string name="qr_title">Quét mã QR</string>

    <!--donationPost/item-->
    <string name="donation_post_title">Tiêu đề</string>
    <string name="donation_post_address">Địa chỉ</string>
    <string name="donation_post_description">Mô tả chi tiết</string>
    <string name="donation_post_category">Lựa chọn danh mục</string>
    <string name="donation_post_number_of_item">Số lượng</string>
    <string name="category_title">Tên danh mục</string>
    <string name="donation_post_target">Mục tiêu</string>
    <string name="donation_post_donators">Danh sách quyên góp</string>
    <string name="item_name">Tên đồ dùng</string>
    <string name="share">Chia sẻ</string>
    <string name="category">Danh mục</string>
    <string name="add_image">Thêm hình ảnh</string>
    <string name="introduction">Giới thiệu</string>
    <string name="donation_default_title">Bài quyên góp</string>
    <string name="error_category">Vui lòng chọn danh mục.</string>
    <string name="select_item">Chọn đồ dùng</string>
    <string name="prefer_item">Sách, quần áo,...</string>
    <string name="prefer_item_title">Bạn mong muốn đổi với đồ dùng nào?</string>

    <string name="no_item_found">Không tìm thấy đồ vật</string>
    <string name="keyword_hint">Nhập từ khóa</string>
    <string name="edit_profile_btn">THAY ĐỔI</string>
    <string name="unfriend">Xóa Bạn</string>
    <string name="add_friend_error">Không Thể Kết Bạn Bây Giờ</string>
    <string name="add_friend_button">Kết Bạn</string>
    <string name="decline_req">Hủy Yêu Cầu</string>
    <string name="cancel_btn">Hủy</string>
    <string name="login_reminder">Đăng Nhập Để Tiếp Tục</string>
    <string name="search_hint">Tìm kiếm</string>

    <!--Transaction Detail-->
    <string name="trans_finish">Hoàn thành</string>
    <string name="add_receipt">Đăng biên nhận chuyển hàng</string>
    <string name="view_my_receipt">Xem biên nhận của bạn</string>
    <string name="receipt_title">Biên nhận của</string>
    <string name="added_receipt">Biên nhận của bạn đã đăng tải thành công.</string>
    <string name="on_off_delivery">Nhờ vận chuyển</string>
    <string name="confirm_receipt">Xác nhận đã trao đổi</string>
    <string name="confirmed_receipt">Xác nhận biên nhận thành công.</string>
    <string name="scan_qr_remind">Hãy quét mã này khi gặp nhau nhé</string>
    <string name="not_upload_receipt_yet">chưa gửi biên nhận.</string>
    <string name="remove_receipt">Xóa biên nhận</string>
    <string name="delivery">Nhờ vận chuyển</string>
    <string name="delivery_open_app">Đặt Grab</string>

    <!--Share FB-->
    <string name="item_link">http://35.247.191.68:9000/item.html?id=</string>
    <string name="donation_link">http://35.247.191.68:9000/donation-post.html?id=</string>

    <string name="at">lúc</string>
</resources>
