<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChooseCategoryDonationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/donation_post_category" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="4dp">

            <TextView
                android:id="@+id/txtCategoryName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/category_title"
                android:textColor="@color/colorGrayDark"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:gravity="end"
                android:text="@string/donation_post_number_of_item"
                android:textColor="@color/colorGrayDark"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textStyle="bold"/>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@+id/lvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>