<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_dark"
        app:title="Title">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/add_image_toolbar" />

            <EditText
                android:id="@+id/edtItemName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/txt_nor_height"
                android:layout_marginTop="8dp"
                android:background="@drawable/edt_whitebg"
                android:hint="@string/item_name"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="9pt"/>

            <TextView
                android:id="@+id/txtError"
                android:layout_width="match_parent"
                android:layout_height="@dimen/txt_nor_height"
                android:background="@drawable/edt_whitebg"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:text="Mô tả"
                android:textColor="@color/colorRed"
                android:textSize="9pt"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edtItemDes"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/edt_whitebg"
                android:gravity="top"
                android:hint="@string/donation_post_description"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="9pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:text="@string/prefer_item_title"
                android:textColor="@color/colorBlack"
                android:textSize="9pt"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edtPreferItems"
                android:layout_width="match_parent"
                android:layout_height="@dimen/txt_nor_height"
                android:background="@drawable/edt_whitebg"
                android:hint="@string/prefer_item"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="9pt"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/share"
                    android:textColor="#000000"
                    android:textSize="9pt"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <!--<Spinner-->
                    <!--android:id="@+id/spPrivacy"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginHorizontal="15dp"-->
                    <!--android:background="@drawable/bg_border_trade"-->
                    <!--android:layout_weight="0.5"-->
                    <!--android:paddingBottom="3dp"/>-->

                <RadioGroup
                    android:id="@+id/spPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:checkedButton="@id/rbPublic">

                    <RadioButton
                        android:id="@+id/rbPublic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/privacy_public"
                        android:textColor="@color/colorBlack"
                        android:textSize="9pt"
                        android:buttonTint="@color/colorGrayDark"/>

                    <RadioButton
                        android:id="@+id/rbFriends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/privacy_friends"
                        android:textColor="@color/colorBlack"
                        android:textSize="9pt"
                        android:buttonTint="@color/colorGrayDark"/>

                </RadioGroup>
            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:paddingLeft="15dp"-->
                    <!--android:text="@string/category"-->
                    <!--android:textColor="#000000"-->
                    <!--android:textSize="9pt"-->
                    <!--android:textStyle="bold"/>-->

                <!--<Spinner-->
                    <!--android:id="@+id/spCategory"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginHorizontal="15dp"-->
                    <!--android:layout_weight="0.5"-->
                    <!--android:background="@drawable/bg_border_trade"-->
                    <!--android:paddingBottom="3dp"/>-->
            <!--</LinearLayout>-->

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/round_keyboard_arrow_right_black_36"
                android:drawableLeft="@drawable/round_format_list_bulleted_black_24"
                android:paddingLeft="15dp"
                android:paddingTop="9dp"
                android:paddingRight="15dp"
                android:paddingBottom="9dp"
                android:text="@string/donation_post_category"
                android:textColor="@color/colorGrayDark"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
